# ancestree

./: .gitignore  .gitlab-ci.yml  404.html  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  deploy.yml  pypi.yml  pytest.yml
assets/demo/: interactive_pipeline.html
assets/demo/060b9a90/: meta.json
assets/demo/0b09e281/: meta.json
assets/demo/0e6bf552/: meta.json
assets/demo/1282fd08/: meta.json
assets/demo/14c6c1ef/: meta.json
assets/demo/24841dce/: meta.json
assets/demo/38dfdb5b/: map.npy  meta.json
assets/demo/395c422d/: meta.json
assets/demo/3e0e55b7/: meta.json
assets/demo/42bf895b/: meta.json
assets/demo/451255cb/: meta.json
assets/demo/4f2a38cf/: meta.json
assets/demo/5128d5d0/: meta.json
assets/demo/52a78439/: meta.json
assets/demo/557a7623/: meta.json
assets/demo/5e67776c/: meta.json
assets/demo/6c0a8f1b/: meta.json
assets/demo/7468f6ca/: meta.json
assets/demo/756e6ae1/: meta.json
assets/demo/79bf40b3/: meta.json
assets/demo/7e1c2b5a/: meta.json
assets/demo/87f946c2/: meta.json
assets/demo/8df988b1/: meta.json
assets/demo/95bd5a43/: meta.json
assets/demo/a6ab8f7d/: meta.json
assets/demo/a89d0fbe/: meta.json
assets/demo/b0e48a61/: meta.json
assets/demo/b6f57ec2/: meta.json
assets/demo/b91811e6/: meta.json
assets/demo/b99b569d/: map.npy  meta.json
assets/demo/c7e2092e/: map.npy  meta.json
assets/demo/cda2be19/: meta.json
assets/demo/df180c6c/: meta.json
assets/demo/e682a685/: meta.json
assets/demo/ee28fcaa/: meta.json
assets/demo/ee5a064d/: meta.json
assets/demo/fb197e8f/: meta.json
caveats/: index.html
demo/: index.html
docs/: caveats.md  demo.md  examples.md  index.md  reference.md
docs/assets/demo/: .index.json  .lineage_config.json  interactive_pipeline.html
docs/assets/demo/02ca6934/: meta.json
docs/assets/demo/096f66ee/: map.npy  meta.json
docs/assets/demo/1421bacb/: meta.json
docs/examples/: ML_pipeline.ipynb  basic_usage.ipynb  benchmark_10k.ipynb  chunk_store_investigation.ipynb  dedupe.ipynb  load_timing_benchmark.ipynb  stress_1_ml_pipeline.ipynb  stress_2_iterative_deep_chain.ipynb  stress_3_dedupe_quirks.ipynb  stress_4_chunking_and_cache.ipynb  timing_benchmark.ipynb
docs/stylesheets/: extra.css
examples/: index.html
examples/ML_pipeline/: index.html
examples/basic_usage/: index.html
examples/timing_benchmark/: index.html
reference/: index.html
search/: search_index.json
src/ancestree/: __init__.py  chunkstore.py  core.py  database.py  models.py  utils.py  vis.py
src/ancestree/assets/: actions.js  styles.css  template_new.html
stylesheets/: extra.css
tests/: __init__.py  conftest.py  test_adversarial.py  test_chunking.py  test_core.py  test_dag.py  test_database.py  test_dedupe.py  test_models.py  test_node_creation_edge_cases.py  test_querying_and_search.py  test_store_api.py  test_utils.py  test_vis.py
(+54 files in other folders)
