[build-system]
requires = ["setuptools>=77.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ancestree-track"
version = "0.1.0"
description = "A Python package for tracing and managing data lineage"
readme = "README.md"
authors = [
  {name = "Joshua Smith", email = "78921007+JS195@users.noreply.github.com"}
]
maintainers = [
  {name = "Joshua Smith", email = "78921007+JS195@users.noreply.github.com"}
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
license = "MIT"
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest",  # testing
    "pytest-cov",
    "ruff",    # linting and formatting
    "mypy",    # type checking
]

[project.urls]
Homepage = "https://github.com/JS195/ancestree"
Documentation = "https://js195.github.io/ancestree/"
"Bug Tracker" = "https://github.com/JS195/ancestree/issues"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["ancestree", "ancestree.assets"]

[tool.setuptools.package-data]
"ancestree" = ["py.typed"]
"ancestree.assets" = ["*"]

[tool.ruff]
line-length = 88

[tool.ruff.lint.per-file-ignores]
# Example/benchmark notebooks favour compact cells; allow one-liner if/for and
# semicolons there (still linted for real issues like unused/undefined names).
"*.ipynb" = ["E701", "E702"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
strict = true